--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -227,7 +227,7 @@ h4 {
   background-color: #22231d;
   display: flex;
   flex-direction: column-reverse;
-  justify-content: flex-end;
+  justify-content: space-around;
 }
 .content-stats .Select_item #titre-ele_item {
   margin-bottom: 10px;
@@ -288,7 +288,7 @@ h4 {
   position: relative;
   background-color: #22231d;
   width: 100%;
-  height: 15%;
+  height: 25%;
   bottom: 0;
   margin-top: 10px;
   display: grid;
@@ -386,6 +386,10 @@ h4 {
   color: rgb(238, 238, 238);
   font-weight: bold;
   font-size: medium;
+}
+
+.graph-container {
+  align-self: flex-start;
 }
 
 /*# sourceMappingURL=styles.css.map */
