--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -274,7 +274,7 @@ h4{
         background-color: $back-color-black;
         display: flex;
         flex-direction: column-reverse;
-        justify-content: flex-end;
+        justify-content: space-around;
       
         #titre-ele_item{
             margin-bottom : 10px;
@@ -342,7 +342,7 @@ h4{
             position: relative;
             background-color: $back-color-black ;
             width: 100%;
-            height: 15%;
+            height: 25%;
             bottom: 0;
             margin-top: 10px;
             display: grid;
@@ -479,3 +479,7 @@ $Color-text-card-red :#bf635a;
     }
 
 }
+
+.graph-container {
+    align-self: flex-start;
+  }
