--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -6,7 +6,7 @@ $back-color-black : #22231d;
 body{
     background-color: $back-color-black-soft;
     font-family: 'Roboto', sans-serif;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 .page-content {
     position: relative;
@@ -194,6 +194,10 @@ h4{
             text-align: center;
             font-family: 'Roboto', sans-serif;
         }
+        #Rep_By_Level{
+          
+            height: 60%;
+        }
      
     }
 
@@ -262,6 +266,7 @@ h4{
         }
         #Rep_By_poids{
             top : -10px;
+            height: 60%;
         }
 
 
@@ -483,3 +488,10 @@ $Color-text-card-red :#bf635a;
 .graph-container {
     align-self: flex-start;
   }
+
+@media (max-width: 320px) {
+    .content-stats{
+        display: grid;
+        flex-direction: 100%;
+    }
+}
