--- a/assets/styles/styles-resp.scss
+++ b/assets/styles/styles-resp.scss
@@ -1,9 +1,34 @@
 // color site
 $text-color-one : #d9d9d7;
 $text-color-green : #d6f204;
+$text-color-green-soft : #f1fc9c;
 $back-color-black-soft : #2b2e25;
 $back-color-black : #22231d;
 
+// Styl scrool bar
+
+::-webkit-scrollbar {
+    width: 10px; /* Largeur de la scrollbar */
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: $text-color-green; /* Couleur de la poignée de la scrollbar */
+    border-radius: 5px; /* Rayon de bordure de la poignée */
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: $text-color-green-soft ; /* Couleur de la poignée de la scrollbar lors du survol */
+  }
+  
+  ::-webkit-scrollbar-track {
+    background-color: $back-color-black-soft  ; /* Couleur de fond de la scrollbar */
+  }
+  
+  /* Pour les navigateurs non-WebKit (Firefox, Edge, etc.) */
+  /* Notez que Firefox a récemment ajouté la prise en charge de ::-webkit-scrollbar */
+  /* Cependant, pour une compatibilité maximale, vous pouvez toujours utiliser les pseudo-classes spécifiques */
+  /* comme indiqué ci-dessous */
+  
 
 //  Style des dropdown
 .dash-dropdown{
