--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,4 +1,25 @@
 @charset "UTF-8";
+::-webkit-scrollbar {
+  width: 10px; /* Largeur de la scrollbar */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #d6f204; /* Couleur de la poignée de la scrollbar */
+  border-radius: 5px; /* Rayon de bordure de la poignée */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #f1fc9c; /* Couleur de la poignée de la scrollbar lors du survol */
+}
+
+::-webkit-scrollbar-track {
+  background-color: #2b2e25; /* Couleur de fond de la scrollbar */
+}
+
+/* Pour les navigateurs non-WebKit (Firefox, Edge, etc.) */
+/* Notez que Firefox a récemment ajouté la prise en charge de ::-webkit-scrollbar */
+/* Cependant, pour une compatibilité maximale, vous pouvez toujours utiliser les pseudo-classes spécifiques */
+/* comme indiqué ci-dessous */
 .dash-dropdown {
   color: #d6f204;
 }
