--- a/assets/styles/styles-resp.scss
+++ b/assets/styles/styles-resp.scss
@@ -162,9 +162,10 @@ body{
         }
     }
     .Repartition_niveau_item{
-      
+        
 
         background-color: $back-color-black;
+        min-height: 650px;
    
 
         #titre-rep-niv{
